# coding-agent

./: .env.example  .gitignore  README.md  package.json
backend/: agent.py  main.py  models.py  pyproject.toml  simple_coding_agent.py  streaming.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: stream.ts
frontend/src/components/: AgentTrace.tsx  BudgetMeter.tsx  ChatInput.tsx  FileExplorer.tsx  FileViewer.tsx  StepCard.tsx  StreamingText.tsx
frontend/src/hooks/: useAgentStream.ts  useFileTree.ts
frontend/src/store/: agentStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: agent.ts
scripts/: bootstrap.sh  dev.sh
